--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -50,6 +50,14 @@ android {
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
+    signingConfigs {
+        debug {
+            keyAlias 'uploadkeystore2228'
+            keyPassword 'android'
+            storeFile file('upload-keystore2228.jks')
+            storePassword 'android'
+        }
+    }
 
     buildTypes {
         release {
