--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.1.2
   google_sign_in: ^6.1.4
+  google_fonts: ^5.0.0
 
 dev_dependencies:
   flutter_test:
