--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -73,6 +73,10 @@ flutter {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version" // or your Kotlin version
+    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.20')
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.20'
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version" // or your Kotlin version
 
 }
+
+//apply plugin: 'com.google.gms.google-services'
