--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -75,6 +75,10 @@ flutter {
 dependencies {
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.20')
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.20'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation platform('com.google.firebase:firebase-bom:31.2.0')
+
+
 //    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version" // or your Kotlin version
 
 }
