--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,11 @@ dependencies:
   flutter_sound: ^9.2.0
   permission_handler: ^11.3.1
   avatar_glow: ^3.0.1
+  firebase_core: ^2.13.1
+  firebase_auth: ^4.6.2
+  webview_flutter: ^4.8.0
+  dio: ^4.0.6
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
