--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,10 @@ dependencies:
   webview_flutter: ^4.8.0
   dio: ^4.0.6
   url_launcher: ^6.3.0
+  shared_preferences: ^2.2.3
+  pdf: ^3.11.1
+  printing: ^5.12.0
+  share_plus: ^7.2.2
 
 dev_dependencies:
   flutter_test:
