--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   pdf: ^3.11.1
   printing: ^5.12.0
   share_plus: ^7.2.2
+  share: ^2.0.4
 
 dev_dependencies:
   flutter_test:
@@ -79,7 +80,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets1/
+    - assets1/Roboto-Regular.ttf
+#    - assets1/fonts/Roboto-Regular.ttf
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -94,7 +96,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+#  fonts:
+#    - family: Roboto
+#      fonts:
+#          - asset: assets/fonts/Roboto-Regular.ttf
+#              weight: 400
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
