--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   share: ^2.0.4
   path_provider: ^2.1.4
   open_file: ^3.3.2
+  google_generative_ai: ^0.4.5
 
 dev_dependencies:
   flutter_test:
