--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "com.android.application"
-    id "kotlin-android"
+    id "org.jetbrains.kotlin.android"
     id "dev.flutter.flutter-gradle-plugin"
 }
 
@@ -29,18 +29,25 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-    namespace "com.example.oscar_stt"
+    namespace "org.samyarth.oscar"
     compileSdkVersion 34
     ndkVersion flutter.ndkVersion
+    ndkVersion "26.1.10909125"
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = "17"
     }
+
+//    kotlinOptions {
+//        jvmTarget = '11'
+//    }
+// org.samyarth.oscar
+
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -48,13 +55,15 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.oscar_stt"
+        applicationId "org.samyarth.oscar"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion 21
+        minSdkVersion 22
         targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+
+
     }
     signingConfigs {
         debug {
@@ -75,13 +84,25 @@ android {
     }
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now,
-            // so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            minifyEnabled true
+            shrinkResources true
             signingConfig signingConfigs.release
+
+//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            // Enable minification and resource shrinking for debug if needed
+            minifyEnabled false
+            shrinkResources false
+            signingConfig signingConfigs.debug
+
+//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+//    lint {
+//        baseline = file("lint-baseline.xml")
+//    }
 }
 
 flutter {
@@ -89,10 +110,12 @@ flutter {
 }
 
 dependencies {
-    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.20')
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.20'
-    implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation platform('com.google.firebase:firebase-bom:31.2.0')
+    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.9.22')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.22"
+//    implementation 'com.google.android.play:core:1.11.7' // Use the latest version available
+//    implementation 'com.google.android.play:core-ktx:1.13.1'
+//    implementation 'com.google.firebase:firebase-analytics-ktx'
+//    implementation platform('com.google.firebase:firebase-bom:31.2.0')
 
 
 //    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version" // or your Kotlin version
