--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,4 @@
+
 buildscript {
     ext.kotlin_version = '1.9.22'
     repositories {
@@ -6,11 +7,15 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.0'
+        classpath 'com.android.tools.build:gradle:8.4.0'
         classpath 'com.google.gms:google-services:4.3.15'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+//        classpath "com.github.ben-manes:gradle-versions-plugin:0.46.0" // Correct notation
+
+
     }
 }
+
 
 allprojects {
     repositories {
