--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   google_generative_ai: ^0.4.5
   shared_preferences: ^2.3.2
   flutter_svg: ^2.0.10+1
+  flutter_email_sender: ^6.0.3
 
 dev_dependencies:
   flutter_test:
@@ -69,7 +70,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets1/oscaricon.png"
+  image_path: "assets1/Group 2.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
